--- a/hooman.yaml
+++ b/hooman.yaml
@@ -30,6 +30,14 @@ dns:
     - 1.1.1.1
     - 112.215.203.254
 proxies:
+  - name: "A2hysnew-ca"
+    type: hysteria2
+    server: 129.153.63.4
+    port: 8443
+    password: 962bdc58d4226749
+    obfs: salamander 
+    obfs-password: fd07f177
+    skip-cert-verify: true
   - name: "A2hysterca2"
     type: hysteria2
     server: 192.18.153.34
@@ -61,6 +69,7 @@ proxy-groups:
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
+      - A2hysnew-ca
       - LOAD-BALANCE
       - BEST-PING
       - FALLBACK
@@ -74,6 +83,7 @@ proxy-groups:
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
+      - A2hysnew-ca
   - name: BEST-PING
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -83,6 +93,7 @@ proxy-groups:
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
+      - A2hysnew-ca
   - name: FALLBACK
     type: fallback
     url: http://www.gstatic.com/generate_204
@@ -91,6 +102,7 @@ proxy-groups:
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
+      - A2hysnew-ca
   - name: Global
     type: select
     proxies:
