--- a/hooman.yaml
+++ b/hooman.yaml
@@ -30,6 +30,17 @@ dns:
     - 1.1.1.1
     - 112.215.203.254
 proxies:
+  - name: Q1tunnel
+    type: vless
+    server: 37.152.188.252
+    port: 2085
+    uuid: f3d62187-569a-4bce-b798-71c9ea551a8d
+    network: tcp
+    tls: true
+    servername: canva.com
+    flow: xtls-rprx-vision
+    skip-cert-verify: true
+    ip-version: dual
   - name: "A2hysnew-ca"
     type: hysteria2
     server: 129.153.63.4
@@ -66,6 +77,7 @@ proxy-groups:
   - name: MANUAL
     type: select
     proxies:
+      - Q1tunnel
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
@@ -80,6 +92,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 60
     proxies:
+      - Q1tunnel
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
@@ -90,6 +103,7 @@ proxy-groups:
     interval: 60
     tolerance: 50
     proxies:
+      - Q1tunnel
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
@@ -99,6 +113,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 60
     proxies:
+      - Q1tunnel
       - A2hysterca2
       - A2hysezpz
       - A2hysteria-ger
