--- a/hooman.yaml
+++ b/hooman.yaml
@@ -125,5 +125,14 @@ proxy-groups:
       - MANUAL
       - BEST-PING
 rules:
+  - IP-CIDR,127.0.0.1/8,DIRECT
+  - IP-CIDR,10.0.0.0/8,DIRECT
+  - IP-CIDR,172.16.0.0/12,DIRECT
+  - IP-CIDR,192.168.0.0/16,DIRECT
+  - IP-CIDR,224.0.0.0/4,DIRECT     # Multicast (used by Chromecast/mDNS)
+  - IP-CIDR,198.18.0.0/15,DIRECT   # Benchmarking/reserved
+  - DST-PORT,1900,DIRECT           # SSDP (screen mirroring discovery)
+  - DST-PORT,5353,DIRECT           # mDNS (Chromecast & AirPlay)
+  - DOMAIN-SUFFIX,local,DIRECT     # .local devices              # Or your default proxy group
   - GEOIP,IR,Global
   - MATCH,MANUAL
